[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartystreets.py"
dynamic = ["version"]
description = "A simple client for the SmartyStreets address validation and geolocation API"
readme = "README.rst"
license = {text = "BSD"}
authors = [
    { name = "Ben Lopatin", email = "ben@benlopatin.com" },
]
keywords = ["smarty", "smartystreets"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit == 4.0.1",
]
test = [
    "pytest == 8.3.4",
    "pytest-cov == 6.0.0",
    "pytest-mock == 3.14.0",
    "pytest-socket == 0.7.0",
    "respx == 0.22.0",
]

[project.urls]
Homepage = "https://github.com/bennylope/smartystreets.py"

[tool.hatch.version]
path = "src/smartystreets/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/smartystreets"]

[tool.hatch.build.targets.sdist]
include = [
    "src/smartystreets",
    "README.rst",
    "HISTORY.rst",
]
