[metadata]
name = smartystreets.py
version = attr: smartystreets.__version__
author = Ben Lopatin
author_email = ben@benlopatin.com
url = https://github.com/bennylope/smartystreets.py
description = A simple client for the SmartyStreets address validation and geolocation API
long_description = file: README.rst, HISTORY.rst
license = BSD License
platforms =
    OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    requests>=2.0.0
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[build-system]
install_requires =
    setuptools >= "40.9.0"
    wheel
test_requires =
    responses == "0.3.0"
