[metadata]
name = smartystreets.py
version = attr: smartystreets.__version__
author = Ben Lopatin
author_email = ben@benlopatin.com
url = https://github.com/bennylope/smartystreets.py
description = A simple client for the SmartyStreets address validation and geolocation API
long_description = file: README.rst, HISTORY.rst
license = BSD License
platforms =
    OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    httpx>=0.19.0
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest == 6.2.5
    pytest-socket == 0.5.0
    pytest-mock == 3.6.1
    pytest-cov == 3.0.0
    pytest-asyncio == 0.16.0
    respx == 0.19.0

[bdist_wheel]
universal = 1

[build-system]
install_requires =
    setuptools >= "40.9.0"
    wheel
